# Legal-ai

./: Copyright.json  MinimumWagesact.json  README.md  adm.json  agents.py  app.py  banking.json  bankruptcy.json  cl.json  const.json  cpa.json  crew.py  design.json  doc_generator.py  environ.json  human_rights.json  it.json  main.py  mar.json  mva.json  patent.json  prop.json  pyproject.toml  requirements.txt  style2.html  tasks.py  tax.json  tools.py  trademarks.json
latex-templates/: 0.tex  1.tex  10.tex  11.tex  12.tex  13.tex  14.tex  15.tex  2.tex  3.tex  4.tex  5.tex  6.tex  7.tex  8.tex  9.tex
legal-data-extractor/: ai_extract.py  pyproject.toml  regex.py  reset.py
